[package]
name = "mandelbrot_mt_f64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "draw_buffer"
harness = false


[dependencies]
minifb = "0.23.0"
rayon = "1.7.0"
