[package]
name = "mandelbrot_mt_f64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dependencies]
minifb = "0.25.0"
rayon = "1.7.0"
crossbeam-channel = "0.5.8"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "mandelbrot"
harness = false
